--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </strong>
   <br>
   <hr>
-  <strong> <a href="D:\web dev bootcamp\web dev\HTML personal site\contact.html">MY CONTACT INFO</a> </strong>
+  <strong> <a href="contact.html">MY CONTACT INFO</a> </strong>
   <br>
   <hr>
   <table border="2">
